--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -2,40 +2,86 @@
 <html>
 <head>
 <style>
-ul {
-  list-style-type: none;
-  margin: 0;
+ul#grid {
   padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
+  list-style: none;
+  margin: 20px auto 0;
+  width: 700px;  
+  }
 
-li {
+#grid li {
   float: left;
-}
+  padding: 0;
+  margin: 0 5px 10px 5px;
+  } 
 
-li a {
+#grid li a {
   display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+  }
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #111;
-}
+#grid li img {
+  background-color: #64666a;
+  padding: 7px; margin: 0;
+  border: 1px dotted #58595b;
+  width: 128px;
+  height: 128px;
+  }
+
+#grid li a:hover img {
+opacity:0.3; filter:alpha(opacity=30);
+  }
+
+.grid_display {
+  padding: 20px;
+  margin-left: auto; margin-right: auto;  margin-top:50px; margin-bottom:0;
+  /*background-color: #ffd7ce;*/
+  width: 513px; 
+
+  /*these two properties will be inherited by .grid_display h2 and .grid_display p */
+  font-family: 'GraublauWeb', arial, serif; 
+  text-align: center;
+  }  
+
+div.grid_display h2 {
+  padding: 0; margin: 0;
+  clear: both;
+  font-size: 35px;
+  font-weight: normal;
+  color: #58595b;
+  background: none;
+  font-family: 'GraublauWeb', arial, serif;  
+
+  /* reset for cascade effects that are trickling down from other h2's */
+  text-transform: none;
+  letter-spacing: normal;
+  }
+
+.grid_display p {
+  margin:0; padding: 0;
+  font-size: 15px;
+  color: #58595b;
+  }
 
 </style>
 </head>
 <body>
 
-<h1>Images</h1>
+<h1 align="center">Welcome to the Sports/Travel Repo</h1>
 
 <% if current_user %>
     <%= "Hello #{current_user.name} "%>
 <% end %>
+
+
+<br><br>
+
+<div id="gallery">
+  <ul id="grid">
+    <% @images.each do |image| %>
+     <li><%= link_to image_tag(image.attachment_url), image_path(image.id) %></li>
+    <% end %>
+  </ul>
+</div>
 
 </body>
 </html>
