--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,3 +1,8 @@
 
 <h3><%= @image.user.name%>'s <%= @image.name%><h3><br>
 <%= image_tag(@image.attachment_url, alt: 'Image')  %>
+
+
+<% if current_user == @image.user_id %>
+    <%= button_to "Delete",  @image, method: :delete%>
+<% end %>
