--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,11 +1,12 @@
 <h2>Sign up</h2>
 
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "users/shared/error_messages", resource: resource %>
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="field">
@@ -21,14 +22,19 @@
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
+
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+
+
 
 <%= render "users/shared/links" %>
