--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@ li a:hover {
   <ul>
       <li><%= link_to "LogIn", new_user_session_path %></li>
       <li><%= link_to "SignUp", new_user_registration_path %></li>
+      <li><%= link_to "Home Page", images_path %></li>
   </ul>
     <% end %>
     <%= yield %>
